# awiki-open-server

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.cn.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml  require.md
deploy/: README.md  awiki-open-server.env.example  awiki-open-server.service.example  install-rwiki-cn-service.sh  nginx-rwiki.cn.conf.example
docs/: anp-interop.md  anp-interop.zh-CN.md  client-compatibility.md  client-compatibility.zh-CN.md  community-groups-design.zh-CN.md  community-groups-gate-report-20260716.md  configuration.md  configuration.zh-CN.md  deployment.md  deployment.zh-CN.md  documentation-style-guide.md  documentation-style-guide.zh-CN.md  ecosystem-overview.md  ecosystem-overview.zh-CN.md  getting-started.md  getting-started.zh-CN.md  maintainer-notes.md  maintainer-notes.zh-CN.md  operations.md  operations.zh-CN.md  release-readiness-checklist.md  release-readiness-checklist.zh-CN.md  screenshot-guidelines.md  screenshot-guidelines.zh-CN.md  screenshot-plan.md  screenshot-plan.zh-CN.md
scripts/: awiki_open_cli.py
tests/: conftest.py  helpers.py  test_agent_compat.py  test_attachments.py  test_cli_smoke.py  test_contact_auth_compat.py  test_direct_messages.py  test_group_host.py  test_group_participant.py  test_health.py  test_identity_documents.py  test_identity_pages.py  test_messaging_objects.py  test_messaging_surface.py  test_profile_compat.py  test_protocol_anp_sdk.py  test_route_config.py  test_rwiki_cn_system.py  test_server_info.py  test_site_relationships.py  (+3 more)
(+85 files in other folders)
